fix(planner): prevent overflow in planner module list (#3701)
* Make planner module lists scrollable

* Allow horizontal scrolling on all elements with element shrinking

* Fix capitalisation on courses

* Fix lint issues

* Capitalize "course" for planner year

* Fix scss styles to use prettier

* Ensure consistency in component naming and props

--- a/website/src/views/planner/PlannerContainer/PlannerContainer.scss
+++ b/website/src/views/planner/PlannerContainer/PlannerContainer.scss
@@ -14,12 +14,17 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
+  gap: 1rem;
 
-  h1 {
+  .headerLeft {
     display: flex;
     align-items: center;
     margin: 0;
-    font-size: $font-size-xlg;
+
+    h1 {
+      font-size: $font-size-xlg;
+    }
 
     button {
       margin-left: 1rem;
@@ -33,11 +38,21 @@
   .headerRight {
     display: flex;
     align-items: center;
+    width: 100%;
   }
 
   .moduleStats {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     margin-right: 1rem;
+
+    p {
+      white-space: nowrap;
+    }
   }
+
+  @include scrollable;
 }
 
 .addYearButton {
@@ -60,6 +75,9 @@
 
 .moduleLists {
   display: flex;
+  width: 100%;
+
+  @include scrollable;
 }
 
 .modListHeaders {
@@ -71,6 +89,7 @@
 .trash {
   opacity: 0.6;
   width: $semester-width;
+  min-width: $semester-width;
   border: 1px dashed;
   border-radius: 0.4rem;
   text-align: center;
